# poker-arena

./: .arena-style  .env.example  .gitignore  pyproject.toml
data/: introspection.json
src/agent/: __init__.py  arena_client.py  cards.py  config.py  context.py  decide.py  main.py  opponents.py  reasoning.py  state.py
src/agent/l1/: __init__.py  entry.py  exploits.py  positions.py  postflop.py  preflop.py  ranges.py
src/agent/l2/: __init__.py  entry.py  prompt.py
src/agent/patterns/: __init__.py  detector.py  observer.py  registry.py  spots.py  store.py
src/agent/tools/: __init__.py  equity.py  range_equity.py
tools/: claim_agent.py  list_models.py  starter_kit_adapter.py  verify_l2.py  watch.py
web/: .env.example  .gitignore  README.md  ecosystem.config.js  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/action/: route.ts
web/app/api/agent/: route.ts
web/app/api/agents/: route.ts
web/app/api/auth/: route.ts
web/app/api/claim/: route.ts
web/app/api/competition/: route.ts
web/app/api/competitions/: route.ts
web/app/api/join/: route.ts
web/app/api/lobby/: route.ts
web/app/api/opponent-summary/: route.ts
web/app/api/rebuy/: route.ts
web/app/api/recent-tables/: route.ts
web/app/api/register/: route.ts
web/components/: ActionPanel.tsx  AgentSwitcher.tsx  Card.tsx  ClaimForm.tsx  ClaimSection.tsx  EventFeed.tsx  LastTableResult.tsx  PasswordGate.tsx  PlayerSeat.tsx  PokerTable.tsx  RegisterForm.tsx
web/lib/: arena.ts  clientFetch.ts  creds.ts  notify.ts  openai.ts  session.ts  types.ts
(+5 files in other folders)
