[project]
name = "poker-arena-agent"
version = "0.1.0"
description = "dev.fun Poker Arena Playground agent"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "openai>=1.50",
    "pokerkit>=0.5",
]

[project.scripts]
agent = "agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.ruff]
line-length = 110
target-version = "py311"
